Default color for type ahead and "type text here" should be gray and overlapping type a head issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -14584,6 +14584,9 @@ padding: 0;
 .searchAssist-kore-chat-window .ps__rail-y{
     z-index: 99999 !important;
 }
+.searchAssist-kore-chat-window #search::placeholder{
+    color:#8a959f;
+}
 
 .mb-15{
 margin-bottom: 15px !important;
